--- a/src/views/options/css/layout.css
+++ b/src/views/options/css/layout.css
@@ -151,15 +151,17 @@ h2 {
 
 #Sidebar {
   display: flex;
-  height: 100%;
+  align-items: center;
   flex-direction: column;
+  flex-basis: 0;
+  height: 100%;
   padding: 0 30px 0 30px;
   background: var(--sidebar-color);
 }
 
 .logo {
-  width: 70px;
-  align-self: center;
+  width: 100%;
+  max-width: 70px;
   margin: 40px 0 10px 0;
 }
 
@@ -185,13 +187,14 @@ h2 {
 }
 
 .nav-item-symbol {
-  padding-right: 15px;
   color: inherit;
   font-size: 30px;
   font-family: Icons;
 }
 
 .nav-item-label {
+  margin-left: 15px;
+  white-space: nowrap;
   color: inherit;
 }
 
@@ -207,7 +210,10 @@ h2 {
 
 #themeSwitch {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
+  row-gap: 14px;
+  column-gap: 14px;
   margin-top: auto;
   padding: 40px 0;
 }
@@ -217,13 +223,10 @@ h2 {
 }
 
 .theme-button {
-  display: flex;
   width: 15px;
   height: 15px;
-  justify-content: center;
-  margin: 0 7px;
   border-radius: 50%;
-  background-color: green;
+  text-align: center;
   box-shadow: 0 0 3px 0 rgba(0,0,0,1);
   transition: box-shadow .3s;
 }
@@ -245,12 +248,10 @@ h2 {
 }
 
 #themeSwitch input[type="radio"]:checked + .theme-button::after {
-  width: 5px;
-  height: 5px;
-  border-radius: 50%;
-  background: var(--border-color);
-  content: "";
-  transform: translateY(20px);
+  content: "\2022";
+  position: relative;
+  bottom: -75%;
+  color: var(--border-color);
 }
 
 /**
@@ -265,8 +266,8 @@ h2 {
 
 .content {
   display: none;
-  width: 560px;
-  padding: 30px 0 30px 30px;
+  max-width: 560px;
+  padding: 30px;
 }
 
 .content:target {
@@ -294,6 +295,9 @@ h2 {
 .align-content-right {
   display: flex;
   justify-content: flex-end;
+  flex-wrap: wrap;
+  row-gap: 15px;
+  column-gap: 15px;
 }
 
 .justify-text {
@@ -318,6 +322,9 @@ h2 {
   display: flex;
   justify-content: flex-start;
   flex-direction: row;
+  flex-wrap: wrap;
+  column-gap: 1rem;
+  row-gap: 1rem;
 }
 
 .ol-item:not(:first-child) {
@@ -360,7 +367,7 @@ h2 {
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  flex-basis: 0;
+  flex-basis: 275px;
   flex-direction: column;
   flex-grow: 1;
   cursor: default;
@@ -370,7 +377,7 @@ h2 {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  flex-basis: 170px;
+  flex-grow: 1;
 }
 
 .ol-description {
@@ -532,10 +539,6 @@ label.button > span {
   color: inherit;
 }
 
-.button + .button {
-  margin-left: 15px;
-}
-
 .button:hover {
   box-shadow: 0 0 10px -4px var(--shadow-color);
   text-decoration: none;
@@ -614,6 +617,7 @@ label.button > span {
   display: flex;
   align-items: baseline;
   flex-direction: row;
+  flex-wrap: wrap;
   padding: 5px 0;
   list-style: none;
 }
@@ -722,7 +726,7 @@ label.button > span {
 .gesture-list {
   display: grid;
   grid-gap: 20px;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(170px, 1fr));
 	grid-template-rows: 1fr;
   grid-auto-rows: 1fr;
   list-style: none;
