Improve settings description length

--- a/src/views/options/css/layout.css
+++ b/src/views/options/css/layout.css
@@ -364,20 +364,14 @@ h2 {
 }
 
 .ol-label {
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
   flex-basis: 275px;
-  flex-direction: column;
   flex-grow: 1;
   cursor: default;
 }
 
 .ol-input {
   display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  flex-grow: 1;
+  margin-left: auto;
 }
 
 .ol-description {
@@ -403,6 +397,7 @@ h2 {
 }
 
 .toggle-button + label {
+  display: inline-block;
   width: 45px;
   padding: 8px 0 6px 0;
   border: 1px solid var(--border-color);
