added missing spacing in gesture popup

--- a/src/views/options/css/layout.css
+++ b/src/views/options/css/layout.css
@@ -904,6 +904,7 @@ label.button > span {
 }
 
 .gp-field-description {
+  margin-bottom: 10px;
   opacity: .5;
   font-size: 14px;
   transition: opacity .3s;
