use full screen width for gestures overview page to improve the overview

--- a/src/views/options/css/layout.css
+++ b/src/views/options/css/layout.css
@@ -274,6 +274,10 @@ h2 {
   display: block;
 }
 
+#Gestures.content {
+  max-width: none;
+}
+
 .content-header {
   position: relative;
   margin-bottom: 20px;
