--- a/src/views/options/html/index.html
+++ b/src/views/options/html/index.html
@@ -55,12 +55,9 @@
     </ul>
 
     <form id="themeSwitch">
-      <input type="radio" name="theme" id="themeDefault" value="default">
-      <label class="theme-button theme-default" for="themeDefault"></label>
-      <input type="radio" name="theme" id="themeWhite" value="white">
-      <label class="theme-button theme-white" for="themeWhite"></label>
-      <input type="radio" name="theme" id="themeDark" value="dark">
-      <label class="theme-button theme-dark" for="themeDark"></label>
+      <input type="radio" class="theme-button theme-default" name="theme" value="default">
+      <input type="radio" class="theme-button theme-white" name="theme" value="white">
+      <input type="radio" class="theme-button theme-dark" name="theme" value="dark">
     </form>
   </div>
 
