--- a/src/views/options/css/layout.css
+++ b/src/views/options/css/layout.css
@@ -1104,11 +1104,11 @@ label.button > span {
   line-height: 100%;
 }
 
-.blacklist {
+.blocklist {
   padding-top: 20px;
 }
 
-.blacklist::after {
+.blocklist::after {
   display: block;
   visibility: hidden;
   opacity: 0;
@@ -1118,7 +1118,7 @@ label.button > span {
   font-size: 18px;
 }
 
-.blacklist:empty::after {
+.blocklist:empty::after {
   visibility: visible;
   opacity: .5;
   transition: opacity .3s;
