made popup commands fission compatible (https://wiki.mozilla.org/Project_Fission)

--- a/src/core/views/popup-command-view/popup-command-view.html
+++ b/src/core/views/popup-command-view/popup-command-view.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="/core/views/popup-command-view/popup-command-view.css">
+  <script src="/core/views/popup-command-view/iframe-popup-command-view.js"></script>
 </head>
 <body>
 </body>
