fixed image size on installation page

--- a/src/views/installation/index.html
+++ b/src/views/installation/index.html
@@ -95,7 +95,7 @@
 
 <div class="block-outer">
   <div class="block-inner">
-    <svg width="27.897mm" height="55.356mm" version="1.1" viewBox="0 0 27.897 55.356" xmlns="http://www.w3.org/2000/svg">
+    <svg class="center" width="27.897mm" height="55.356mm" version="1.1" viewBox="0 0 27.897 55.356" xmlns="http://www.w3.org/2000/svg">
       <g transform="translate(-46.528 -86.004)">
        <path d="m62.183 121.95v16.885h5.3e-4a1 0.18991 0 0 0 0.99994 0.1891 1 0.18991 0 0 0 0.99994-0.1897 1 0.18991 0 0 0-5.3e-4 0v-16.882z" style="color-rendering:auto;color:#000000;dominant-baseline:auto;fill:#555;font-feature-settings:normal;font-variant-alternates:normal;font-variant-caps:normal;font-variant-ligatures:normal;font-variant-numeric:normal;font-variant-position:normal;image-rendering:auto;isolation:auto;mix-blend-mode:normal;shape-padding:0;shape-rendering:auto;solid-color:#000000;text-decoration-color:#000000;text-decoration-line:none;text-decoration-style:solid;text-indent:0;text-orientation:mixed;text-transform:none;white-space:normal"/>
        <ellipse cx="63.237" cy="139.39" rx="10.214" ry="1.9673" style="fill-opacity:.12549;fill:#585858;paint-order:normal"/>
