--- a/src/views/options/html/index.html
+++ b/src/views/options/html/index.html
@@ -41,9 +41,9 @@
         </a>
       </li>
       <li class="nav-item">
-        <a href="#Blocklist">
+        <a href="#Blacklist">
           <span class="nav-item-symbol icon-list"></span>
-          <span class="nav-item-label" data-i18n="navigationBlocklist"></span>
+          <span class="nav-item-label" data-i18n="navigationBlacklist"></span>
         </a>
       </li>
       <li class="nav-item">
@@ -65,7 +65,7 @@
     <div class="content" data-include="/views/options/html/content/settings.inc" id="Settings"></div>
     <div class="content" data-include="/views/options/html/content/gestures.inc" id="Gestures"></div>
     <div class="content" data-include="/views/options/html/content/extras.inc" id="Extras"></div>
-    <div class="content" data-include="/views/options/html/content/blacklist.inc" id="Blocklist"></div>
+    <div class="content" data-include="/views/options/html/content/blacklist.inc" id="Blacklist"></div>
     <div class="content" data-include="/views/options/html/content/about.inc" id="About"></div>
   </div>
 </body>
