--- a/src/views/options/html/index.html
+++ b/src/views/options/html/index.html
@@ -14,7 +14,7 @@
   <script src="/views/options/js/index.js" type="module"></script>
   <script src="/views/options/js/content/settings.js" type="module"></script>
   <script src="/views/options/js/content/gestures.js" type="module"></script>
-  <script src="/views/options/js/content/blacklist.js" type="module"></script>
+  <script src="/views/options/js/content/exclusions.js" type="module"></script>
   <script src="/views/options/js/content/about.js" type="module"></script>
 </head>
 
@@ -41,9 +41,9 @@
         </a>
       </li>
       <li class="nav-item">
-        <a href="#Blacklist">
+        <a href="#Exclusions">
           <span class="nav-item-symbol icon-list"></span>
-          <span class="nav-item-label" data-i18n="navigationBlacklist"></span>
+          <span class="nav-item-label" data-i18n="navigationExclusions"></span>
         </a>
       </li>
       <li class="nav-item">
@@ -65,7 +65,7 @@
     <div class="content" data-include="/views/options/html/content/settings.inc" id="Settings"></div>
     <div class="content" data-include="/views/options/html/content/gestures.inc" id="Gestures"></div>
     <div class="content" data-include="/views/options/html/content/extras.inc" id="Extras"></div>
-    <div class="content" data-include="/views/options/html/content/blacklist.inc" id="Blacklist"></div>
+    <div class="content" data-include="/views/options/html/content/exclusions.inc" id="Exclusions"></div>
     <div class="content" data-include="/views/options/html/content/about.inc" id="About"></div>
   </div>
 </body>
