--- a/src/views/options/css/layout.css
+++ b/src/views/options/css/layout.css
@@ -841,6 +841,28 @@ label.button > span {
   }
 }
 
+.gl-item-animate-remove {
+  animation-name: animateRemoveItem;
+  animation-duration: .3s;
+  animation-timing-function: ease;
+}
+
+@keyframes animateRemoveItem {
+  from {
+    opacity: 1;
+    transform: scale(1);
+  }
+  30% {
+    opacity: 0;
+    transform: scale(.9);
+  }
+  to {
+    visibility: hidden;
+    opacity: 0;
+    transform: scale(.9);
+  }
+}
+
 .gl-thumbnail {
   padding: 15px;
   --animationDuration: calc(var(--pathLength) * var(--pathScale) * 0.004s);
