--- a/src/views/options/html/index.html
+++ b/src/views/options/html/index.html
@@ -55,9 +55,9 @@
     </ul>
 
     <form id="themeSwitch">
-      <input type="radio" class="theme-button theme-default" name="theme" value="default">
-      <input type="radio" class="theme-button theme-white" name="theme" value="white">
+      <input type="radio" class="theme-button theme-light" name="theme" value="light">
       <input type="radio" class="theme-button theme-dark" name="theme" value="dark">
+      <input type="radio" class="theme-button theme-high-contrast" name="theme" value="highContrast">
     </form>
   </div>
 
