set Gestures as the default/first options page

--- a/src/views/installation/index.html
+++ b/src/views/installation/index.html
@@ -138,7 +138,7 @@
           </svg>
           <div class="center-vertically">
             <p class="text" data-i18n="welcomePageLowerSectionGetStartedText"></p>
-            <a class="link" href="/views/options/html/index.html#Gestures" data-i18n="welcomePageLowerSectionGetStartedLink"></a>
+            <a class="link" href="/views/options/index.html" data-i18n="welcomePageLowerSectionGetStartedLink"></a>
           </div>
         </div>
 
